--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,79 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: 'Hind';
+  height: 300vh;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 /* VARIABLES */
+nav {
+  width: 220px;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: #382d2f;
+  color: #D7D6D6;
+}
+
+nav img {
+  width: 150px;
+  height: 121px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 40px auto;
+}
+
+nav ul {
+  list-style-type: none;
+  padding-top: 30px;
+}
+
+nav ul li {
+  text-transform: uppercase;
+  text-align: center;
+  cursor: pointer;
+  line-height: 30px;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  margin: 0 20px;
+}
+
+nav .fa-chevron-up:before {
+  text-align: center;
+}
+
+nav span {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.jumbotron {
+  height: 100vh;
+  background-color: gray;
+}
+
 /* COLUMN*/
 .col-1 {
   width: 8.33%;
