--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -6,6 +6,7 @@ nav {
     top: 0;
     background-color: $font-color-dark;
     color: $font-color-light;
+    z-index: 1;
 
     img {
         width: 150px;
