Style section about

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,5 @@
 /* VARIABLES */
 
-$font-color-dark: #382d2f;
+$background-color-dark: #382d2f;
+$background-color-darker: #2c2626;
 $font-color-light: #D7D6D6;
