--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ nav {
   position: fixed;
   right: 0;
   top: 0;
-  background-color: #382d2f;
+  background-color: #2c2626;
   color: #D7D6D6;
   z-index: 1;
 }
@@ -211,5 +211,45 @@ nav span {
 
 .col-offset-11 {
   margin-left: 91.66%;
+}
+
+.about {
+  height: 100vh;
+  background-color: #2c2626;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  color: #D7D6D6;
+}
+
+.about img {
+  position: absolute;
+  left: 50%;
+  top: -38px;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+}
+
+.about h5 {
+  font-size: 2vw;
+  margin-top: 15px;
+}
+
+.about hr {
+  margin: 0 auto;
+}
+
+.about .spec {
+  margin-top: 50px;
+}
+
+.about .spec hr {
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.about .spec .main-text {
+  font-size: 1.5vw;
+  font-weight: bold;
 }
 /*# sourceMappingURL=style.css.map */
