--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -4,7 +4,7 @@ nav {
     position: fixed;
     right: 0;
     top: 0;
-    background-color: $font-color-dark;
+    background-color: $background-color-darker;
     color: $font-color-light;
     z-index: 1;
 
