Add flex to about

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -6,6 +6,12 @@
     text-align: center;
     color: $font-color-light;
 
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
     img {
         position: absolute;
         left: 50%;
@@ -23,17 +29,14 @@
         margin: 0 auto;
     }
 
-    .spec {
-        margin-top: 50px;
-
-        hr {
-            margin-top: 10px;
-            margin-bottom: 15px;
-        }
-
-        .main-text {
-            font-size: 1.5vw;
-            font-weight: bold;
-        }
+    hr {
+        margin-top: 10px;
+        margin-bottom: 15px;
     }
+
+    .main-text {
+        font-size: 1.5vw;
+        font-weight: bold;
+    }
+}
 }
