--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,19 @@ nav span {
   color: #D7D6D6;
 }
 
+.about .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
+}
+
 .about img {
   position: absolute;
   left: 50%;
