--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -7,14 +7,15 @@
     color: $font-color-light;
 
     .container {
+        height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
     }
 
     img {
         position: absolute;
-        left: 50%;
+        left: calc(50% - 110px);
         top: -38px;
         transform: translate(-50%, 0);
 
@@ -38,5 +39,4 @@
         font-size: 1.5vw;
         font-weight: bold;
     }
-}
 }
