--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -7,6 +7,7 @@
 body {
     font-family: 'Hind';
     //font-family: 'Work Sans', sans-serif;
+    //color: $font-color-dark;
     height: 300vh;
 }
 
